XW-2018 | fixed search input animation on small and medium breakpoint

--- a/extensions/wikia/DesignSystem/styles/design-system.scss
+++ b/extensions/wikia/DesignSystem/styles/design-system.scss
@@ -1,5 +1,6 @@
 @import '/extensions/wikia/DesignSystem/bower_components/design-system/dist/css/styles.css';
 @import '../bower_components/design-system/base/colors';
+@import '../bower_components/design-system/base/breakpoints';
 
 // Platform-specific styles for DesignSystem integration
 $global-navigation-z-index: 5000101;
@@ -72,6 +73,11 @@ $search-buttons-transition-duration: 50ms;
 		}
 	}
 
+	&__links-and-search {
+		display: flex;
+		flex: 4 1 auto;
+	}
+
 	&__link,
 	&__wikis-menu {
 		max-width: 100%;
@@ -92,12 +98,37 @@ $search-buttons-transition-duration: 50ms;
 		z-index: 2;
 	}
 
+	&__search-label {
+		position: relative;
+
+		.wds-icon {
+			z-index: 1;
+		}
+	}
+
 	&__search-close {
 		display: block;
 		max-width: 0;
 		opacity: 0;
 		padding: 0;
 		transition: all $search-buttons-transition-duration;
+	}
+
+	&__search {
+		flex: 0 1 auto;
+		transition: all $search-transition-duration ease;
+	}
+
+	&__search-input {
+		box-sizing: border-box;
+		left: 0;
+		max-width: 100%;
+		padding-left: 20px;
+		position: absolute;
+		right: 0;
+		top: 3px;
+		transition: all $search-transition-duration ease;
+		width: auto;
 	}
 
 	&.wds-search-is-active .wds-global-navigation {
@@ -119,6 +150,10 @@ $search-buttons-transition-duration: 50ms;
 			padding: 0;
 		}
 
+		&__search-input {
+			padding-left: 20px;
+		}
+
 		&__search-submit {
 			border-width: 1px;
 			max-width: 100%;
@@ -131,6 +166,39 @@ $search-buttons-transition-duration: 50ms;
 			opacity: 1;
 			padding-right: 8px;
 			transition-delay: $search-transition-duration - $search-buttons-transition-duration;
+		}
+	}
+
+	@media #{$breakpoint-l-up} {
+		&__search {
+			flex-grow: 2;
+		}
+
+		&__search-input {
+			padding-left: 4px;
+			position: relative;
+			top: auto;
+		}
+
+		&.wds-search-is-active .wds-global-navigation {
+			&__search-input {
+				padding-left: 4px;
+			}
+		}
+	}
+}
+
+
+.wds-search-is-always-visible {
+	.wds-global-navigation__search-input {
+		padding-left: 4px;
+		position: relative;
+		top: auto;
+	}
+
+	&.wds-search-is-active .wds-global-navigation {
+		&__search-input {
+			padding-left: 4px;
 		}
 	}
 }
